unpackaged/main/default/objects/Seating_Times__c/Seating_Times__c.object-meta.xml
<CustomObject>
    <label>Seating Times</label>
    <nameField>
        <displayFormat>ST - {000000}</displayFormat>
        <label>Seating Times Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Seating Times</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>