unpackaged/main/default/objects/Seating_Times__c/fields/Seating_Times__c.field-meta.xml
<CustomField>
    <fullName>Seating_Times__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Seating Times</label>
    <length>200</length>
    <type>Text</type>
</CustomField>