unpackaged/main/default/objects/Seating_Times__c/fields/Table_Type__c.field-meta.xml
<CustomField>
    <fullName>Table_Type__c</fullName>
    <label>Table Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Round</fullName>
            </value>
            <value>
                <fullName>Square</fullName>
            </value>
            <value>
                <fullName>Rectangle</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>