unpackaged/main/default/objects/Seating_Times__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <label>Vendor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Seating Times</relationshipLabel>
    <relationshipName>Seating_Times</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>